tests/rustdoc-ui/doctest/test-compile-fail1.rs
//@ compile-flags:--test

/// ```
/// assert!(true)
/// ```
pub fn f() {}

pub fn f() {}
//~^ ERROR the name `f` is defined multiple times
